Ignorar .DS_Store

--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
 
         <div id="carousel-clientes">     
             <div class="slide active">           
-                <div class="carousel-item active">
-                    <div class="cliente-carta">
-                        <img src="./imagenes/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
-                        <img src="./imagenes/handy-pizza.png" alt="Logo Handy Pizza">
-                    </div>
+                <div class="cliente-carta">
+                    <img src="./imagenes/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
                 </div>
+                <div class="cliente-carta"></div>    
+                    <img src="./imagenes/handy-pizza.png" alt="Logo Handy Pizza">
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center gap-3">
                         <img src="./imagenes/seacost-food.svg" class="d-block w-100 img-slide" alt="Logo Seacost">
