--- a/index.html
+++ b/index.html
@@ -67,43 +67,48 @@
         </div>
     </section>
     <section class="nuestros-clientes container">
-<<<<<<< HEAD
-        <div class="clientes"
-=======
+        <div class="clientes">
         <h2>Conoce a nuestros clientes</h2>
-
         <div class="carousel-clientes-wrapper">
             <button id="prev" class="carousel-boton">‹</button>
 
             <div class="carousel-clientes">     
                 <div class="slide active">           
                     <div class="cliente-carta">
-                        <img src="./imagenes/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
+                        <img src="./imagenes/logos/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
                     </div>
                     <div class="cliente-carta">   
-                        <img src="./imagenes/handy-pizza.png" alt="Logo Handy Pizza">
+                        <img src="./imagenes/logos/handy-pizza.png" alt="Logo Handy Pizza">
                     </div> 
-                </div>
-                <div class="slide">
                     <div class="cliente-carta">
-                        <img src="./imagenes/seacost-food.svg" class="d-block w-100 img-slide" alt="Logo Seacost">
-                    </div>
-                    <div class="cliente-carta">
-                        <img src="./imagenes/iruya-excursiones.jpg" class="d-block w-100 img-slide"  alt="Logo Iruya excursiones">
+                        <img src="./imagenes/logos/la-dorita.jpg">
                     </div>
                 </div>
                 <div class="slide">
                     <div class="cliente-carta">
-                        <img src="./imagenes/kool-sports.jpg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                        <img src="./imagenes/logos/seacost-food.svg" class="d-block w-100 img-slide" alt="Logo Seacost">
                     </div>
                     <div class="cliente-carta">
-                        <img src="./imagenes/H&H-Alimentos.svg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                        <img src="./imagenes/logos/iruya-excursiones.jpg" class="d-block w-100 img-slide"  alt="Logo Iruya excursiones">
+                    </div>
+                    <div class="cliente-carta">
+                        <img src="./imagenes/logos/monte-hermon.svg">
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="cliente-carta">
+                        <img src="./imagenes/logos/kool-sports.jpg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                    </div>
+                    <div class="cliente-carta">
+                        <img src="./imagenes/logos/H&H-Alimentos.svg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                    </div>
+                    <div class="cliente-carta">
+                        <img src="./imagenes/logos/olifaza.jpg">
                     </div>
                 </div>
             </div>
             <button id="next" class="carousel-boton">›</button>
         </div>
->>>>>>> 4bf9543 (carrusel)
     </section>
     <script src="./javaScript/script.js"></script>
 </body>
