--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"></head>
 <body>
-    <header> <!--Seccion principal, portada de la pagina-->
+    <header class="header"> <!--Seccion principal, portada de la pagina-->
         <nav class="navbar section-content"> <!--Menu de navegacio limitado en un contenedor-->
             <a href="#" class="nav-logo">
                 <img src="./imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
@@ -35,16 +35,21 @@
     </header>
     <main>
         <section class="hero-section">
-            <div class="hero-img">
+            <video class="hero_video" src="./imagenes/creative.mp4"  autoplay muted loop></video>
+            <div class="hero_overlay"></div>
+            <div class="hero_content container">
+                <img src="./imagenes/universo-logo.png" alt="Logo Universo Agencia">
+                <p class="hero_subtitle">Creamos experiencias que conectan a tu marca con el mundo.</p>
             </div>
         </section>
     </main>
     <section class="nuestros-servicios my-container">
         <h2>Nuestros Servicios</h2>
+        <p class="servicios-texto">Combinamos creatividad, estrategia y tecnología para potenciar tu marca. Desde el diseño hasta la gestión digital, creamos soluciones que conectan, destacan y generan resultados.</p>
         <div class="cartas-contenedor">
             <div class="carta" id="branding">
                 <img src="./imagenes/self-development (1).png" class="iconos">
-                <h3>Branding & Packaging</h3>
+                <h3>Branding</h3>
             </div>
             <div class="carta" id="disenio-grafico">
                 <img src="./imagenes/pensamiento-logico.png" class="iconos">
@@ -129,7 +134,7 @@
                     <div class="form-row">
                         <div class="form-grupo">
                             <label for="email">Teléfono</label>
-                            <input type="telefono" id="telefono" required>
+                            <input type="tel" id="telefono" required>
                         </div>
                         <div class="form-grupo">
                             <label for="name">Mail de contacto</label>
@@ -180,17 +185,16 @@
                 <img src="./imagenes/team.jpeg" alt="ilustracion de Contacto">
             </div>
         </div>
-    </section>
-    <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100; /* encima de casi todo */">
-        <div id="contactToast"class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">¡Gracias! Tu consulta ha sido enviada. Nos pondremos en contacto pronto.</div>
-                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Cerrar"></button>
+        <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 1100;">
+            <div id="liveToast" class="toast align-items-center text-bg-success border-0" …>
+                <div class="d-flex">
+                    <div id="toast-message" class="toast-body"></div>
+                    <button class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-qAN4xtpHbHhJlrYp1i8Y+M1yXw9SQ+6CIqY4FYoj2F0i0FxKoqPMXYDFP5dN9I3z" crossorigin="anonymous"></script>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-…" crossorigin="anonymous"></script>
     <script src="./javaScript/script.js"></script>
-
 </body>
 </html>
