--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
             <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Inicio</a>
+                    <a href="index.html" class="nav-link">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Servicios</a>
+                    <a href="./html/servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Objetivos</a>
+                    <a href="./html/objetivos.html" class="nav-link">Objetivos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Nosotros</a>
+                    <a href="./html/nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contacto</a>
+                    <a href="./html/contacto.html" class="nav-link">Contacto</a>
                 </li>
             </ul>
         </nav>
@@ -197,4 +197,52 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-…" crossorigin="anonymous"></script>
     <script src="./javaScript/script.js"></script>
 </body>
+<footer class="footer">
+  <div class="container footer__container">
+    <!--redes sociales-->
+    <div class="footer__section">
+        <h4 class="footer__title">Redes Sociales</h4>
+        <nav class="footer__socials">
+            <!--ig-->
+            <a href="https://www.instagram.com/universoagencia/" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                <img src="./imagenes/footer/instagram.png" alt="Instagram" class="social-icon"/>@universoagencia
+            </a>
+
+            <!--LinkedIn-->
+            <a href="https://www.linkedin.com/in/tu_usuario" target="_blank" rel="noopener" aria-label="LinkedIn" class="footer__social-link">
+                <img src="./imagenes/footer/linkedin.png" alt="LinkedIn" class="social-icon"/>LinkedIn
+            </a>
+        </nav>
+    </div>
+
+    <!-- contacto -->
+    <div class="footer__section">
+        <h4 class="footer__title">Contáctanos</h4>
+        <nav class="footer__socials">
+            <a href="universoagenciaok@gmail.com" target="_blank" rel="noopener" aria-label="Instagram" class="footer__social-link">
+                <img src="./imagenes/footer/correo.png" alt="Correo Electrónico Universo" class="social-icon">
+                universoagenciaok@gmail.com
+            </a>
+            <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="footer__social-link">
+                <img src="./imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />WhatsApp
+            </a>  
+        </nav>
+    </div>
+
+    <!-- horario de atención -->
+    <div class="footer__section">
+        <h4 class="footer__title">Horario de Atención</h4>
+            <p class="footer__hours">
+                <img src="./imagenes/footer/reloj-de-pared.png" alt="Horario" class="social-icon"/>
+                Lunes a Viernes<br/>
+                9:00 – 18:00
+            </p>
+        </div>
+  </div>
+
+  <!-- Línea de derechos reservados -->
+  <div class="footer__bottom">
+    <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
+  </div>
+</footer>
 </html>
