--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="boton">
-            <a href="#" class="button mas-info">Mas Informacion</a>
+            <a href="./html/servicios.html" class="button mas-info">Mas Informacion</a>
         </div>
     </section>
     <section class="nuestros-clientes my-container">
@@ -118,6 +118,9 @@
     </section>
     <section class="contacto">
         <h2>Contacto</h2>
+        <p class="textoContacto">Completá el formulario y contanos sobre tu marca, tu visión o lo que querés lograr. 
+        </br> Nos entusiasma crear proyectos con propósito y encontrar juntos la mejor forma de hacerlos crecer.</p>
+        
         <div class="contacto-contenido">
             <div class="contacto-formulario">
                 <form id="form-contacto">
