--- a/index.html
+++ b/index.html
@@ -69,52 +69,57 @@
             </div>
         </div>
         <div class="boton">
-            <a href="./html/servicios.html" class="button mas-info">Mas Informacion</a>
+            <a href="./html/servicios.html" class="button mas-info">Mas Información</a>
         </div>
     </section>
     <section class="nuestros-clientes my-container">
         <div class="clientes">
-        <h2>Conoce a nuestros clientes</h2>
-        <div class="carousel-clientes-wrapper">
-            <button id="prev" class="carousel-boton">‹</button>
-
-            <div class="carousel-clientes">     
-                <div class="slide active">           
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
+            <h2>Transformamos ideas en marcas con propósito</h2>
+            <p class="textoClientes"> Cada proyecto es un trabajo en equipo: ideas compartidas, miradas alineadas y objetivos comunes. </br> Estas maras confían  en nuestra mirada estratégica, en la creatividad del equipo y el compromiso de crear algo auténtico.</p>
+            <div class="carousel-clientes-wrapper">
+                <button id="prev" class="carousel-boton">‹</button>
+                <div class="carousel-clientes">     
+                    <div class="slide active">           
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/cuyo-nuestro.png" alt="Logo Cuyo Nuestro">                        
+                        </div>
+                        <div class="cliente-carta">   
+                            <img src="./imagenes/logos/handy-pizza.png" alt="Logo Handy Pizza">
+                        </div> 
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/la-dorita.jpg">
+                        </div>
                     </div>
-                    <div class="cliente-carta">   
-                        <img src="./imagenes/logos/handy-pizza.png" alt="Logo Handy Pizza">
-                    </div> 
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/la-dorita.jpg">
+                    <div class="slide">
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/seacost-food.svg" class="d-block w-100 img-slide" alt="Logo Seacost">
+                        </div>
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/iruya-excursiones.jpg" class="d-block w-100 img-slide"  alt="Logo Iruya excursiones">
+                        </div>
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/monte-hermon.svg">
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/kool-sports.jpg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                        </div>
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/H&H-Alimentos.svg" class="d-block w-100 img-slide" alt="logo kool-sports">
+                        </div>
+                        <div class="cliente-carta">
+                            <img src="./imagenes/logos/olifaza.jpg">
+                        </div>
                     </div>
                 </div>
-                <div class="slide">
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/seacost-food.svg" class="d-block w-100 img-slide" alt="Logo Seacost">
-                    </div>
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/iruya-excursiones.jpg" class="d-block w-100 img-slide"  alt="Logo Iruya excursiones">
-                    </div>
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/monte-hermon.svg">
-                    </div>
-                </div>
-                <div class="slide">
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/kool-sports.jpg" class="d-block w-100 img-slide" alt="logo kool-sports">
-                    </div>
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/H&H-Alimentos.svg" class="d-block w-100 img-slide" alt="logo kool-sports">
-                    </div>
-                    <div class="cliente-carta">
-                        <img src="./imagenes/logos/olifaza.jpg">
-                    </div>
-                </div>
+                <button id="next" class="carousel-boton">›</button>
             </div>
-            <button id="next" class="carousel-boton">›</button>
         </div>
+
+        <div class="boton">
+            <h3>Todo empieza con una decisión.</h3>
+            <a href="./html/contacto.html" class="button se-parte">Empecemos a crear</a>
     </section>
     <section class="contacto">
         <h2>Contacto</h2>
