--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section class="nuestros-clientes my-container">
         <div class="clientes">
             <h2>Transformamos ideas en marcas con propósito</h2>
-            <p class="textoClientes"> Cada proyecto es un trabajo en equipo: ideas compartidas, miradas alineadas y objetivos comunes. </br> Estas maras confían  en nuestra mirada estratégica, en la creatividad del equipo y el compromiso de crear algo auténtico.</p>
+            <p class="textoClientes"> Cada proyecto es un trabajo en equipo: ideas compartidas, miradas alineadas y objetivos comunes. </br> Estas marcas confían en nuestra mirada estratégica, la creatividad del equipo y el compromiso de crear algo auténtico.</p>
             <div class="carousel-clientes-wrapper">
                 <button id="prev" class="carousel-boton">‹</button>
                 <div class="carousel-clientes">     
