--- a/html/contacto.html
+++ b/html/contacto.html
@@ -115,8 +115,8 @@
                         <span>universoagenciaok@gmail.com</span>
                     </div>
                     <div class="contacto-item">
-                        <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp">
-                        <span>Contáctanos</span>
+                        <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="contacto-whatsapp">
+                            <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />WhatsApp </a>  
                     </div>
                     <div class="contacto-item horario">
                         <img src="../imagenes/footer/reloj-de-pared.png" alt="Horario">
