--- a/html/objetivos.html
+++ b/html/objetivos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
-        <nav class="navbar section-content"> <!--Menu de navegacio limitado en un contenedor-->
+        <nav class="navbar my-container"> <!--Menu de navegacio limitado en un contenedor-->
             <a href="#" class="nav-logo">
                 <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
             </a>
