--- a/html/contacto.html
+++ b/html/contacto.html
@@ -115,7 +115,7 @@
                         <span>universoagenciaok@gmail.com</span>
                     </div>
                     <div class="contacto-item">
-                        <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="k">
+                        <a href="https://wa.me/" target="_blank" rel="noopener" aria-label="WhatsApp"class="contacto-whatsapp">
                             <img src="../imagenes/footer/whatsapp.png" alt="WhatsApp" class="social-icon" />WhatsApp </a>  
                     </div>
                     <div class="contacto-item horario">
