--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
         <nav class="navbar section-content"> <!--Menu de navegacio limitado en un contenedor-->
-            <a href="#" class="nav-logo">
+            <a href="index.html" class="nav-logo">
                 <img src="./imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
             </a>
             <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
