--- a/html/servicios.html
+++ b/html/servicios.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
         <nav class="navbar my-container"> <!--Menu de navegacio limitado en un contenedor-->
-            <a href="#" class="nav-logo">
+            <a href="../index.html" class="nav-logo">
                 <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
             </a>
             <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
