--- a/html/servicios.html
+++ b/html/servicios.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
-        <nav class="navbar my-container"> <!--Menu de navegacio limitado en un contenedor-->
+        <nav class="navbar my-container">
             <a href="../index.html" class="nav-logo">
-                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
+                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
             </a>
-            <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
+        <div class="menu-toggle">☰</div>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="../index.html" class="nav-link">Inicio</a>
@@ -21,13 +21,13 @@
                     <a href="./servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./objetivos.html" class="nav-link">Objetivos</a>
-                </li>
-                <li class="nav-item">
                     <a href="./nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a href="./contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./gestion-clientes.html" class="nav-link nav-gestion">Gestión</a>
                 </li>
             </ul>
         </nav>
