--- a/html/contacto.html
+++ b/html/contacto.html
@@ -11,9 +11,9 @@
 <body>
     <header class="header">
         <nav class="navbar my-container">
-        <a href="#" class="nav-logo">
-            <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
-        </a>
+            <a href="../index.html" class="nav-logo">
+                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
+            </a>
         <div class="menu-toggle">☰</div>
             <ul class="nav-menu">
                 <li class="nav-item">
@@ -23,13 +23,13 @@
                     <a href="./servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./objetivos.html" class="nav-link">Objetivos</a>
-                </li>
-                <li class="nav-item">
                     <a href="./nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a href="./contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./gestion-clientes.html" class="nav-link nav-gestion">Gestión</a>
                 </li>
             </ul>
         </nav>
