--- a/html/gestion-clientes.html
+++ b/html/gestion-clientes.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universo - Objetivos</title>
-    <link rel="stylesheet" href="../css/style-objetivos.css">
+    <link rel="stylesheet" href="../css/style-gestion.css">
 </head>
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
-        <nav class="navbar my-container"> <!--Menu de navegacio limitado en un contenedor-->
-            <a href="#" class="nav-logo">
-                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
+        <nav class="navbar my-container">
+            <a href="../index.html" class="nav-logo">
+                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
             </a>
-            <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
+        <div class="menu-toggle">☰</div>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="../index.html" class="nav-link">Inicio</a>
@@ -21,13 +21,13 @@
                     <a href="./servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./objetivos.html" class="nav-link">Objetivos</a>
-                </li>
-                <li class="nav-item">
                     <a href="./nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a href="./contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./gestion-clientes.html" class="nav-link nav-gestion">Gestión</a>
                 </li>
             </ul>
         </nav>
@@ -87,6 +87,6 @@
             <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
         </div>
     </footer>
-    <script src="../javaScript/script-objetivos.js"></script>
+    <script src="../javaScript/script-gestion.js"></script>
 </body>
 </html>
