--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"></head>
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
-        <nav class="navbar section-content"> <!--Menu de navegacio limitado en un contenedor-->
+        <nav class="navbar my-container">
             <a href="index.html" class="nav-logo">
-                <img src="./imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"> 
+                <img src="../imagenes/universo-logo.png" alt="logoUniverso" class="nav_img"/>
             </a>
-            <div class="menu-toggle">☰</div> <!--Darle propiedades con Java Script!! -->
+        <div class="menu-toggle">☰</div>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Inicio</a>
@@ -22,13 +22,13 @@
                     <a href="./html/servicios.html" class="nav-link">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./html/objetivos.html" class="nav-link">Objetivos</a>
-                </li>
-                <li class="nav-item">
                     <a href="./html/nosotros.html" class="nav-link">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a href="./html/contacto.html" class="nav-link">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./html/gestion-clientes.html" class=" nav-link nav-gestion">Gestión</a>
                 </li>
             </ul>
         </nav>
