--- a/html/gestion-clientes.html
+++ b/html/gestion-clientes.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Universo - Objetivos</title>
     <link rel="stylesheet" href="../css/style-gestion.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"></head>
+
 </head>
 <body>
     <header class="header"> <!--Seccion principal, portada de la pagina-->
@@ -32,13 +34,37 @@
             </ul>
         </nav>
     </header>
+    <div id="login">
+        <h2>Acceso Restringido</h2>
+        <p>Si usted es parte del equipo de </br><em>Universo Agencia</em>, ingrese la clave para continuar.</p>
+        <input type="password" id="contraseña" placeholder="Ingrese la Contraseña">
+        <button id="ingresar">Ingresar</button>
 
-    <main>
-        <section>
-            <h1>OBJETIVOS</h1>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed vitae esse autem explicabo blanditiis dolor, ex aspernatur doloremque! Sit aliquid consequuntur hic nobis officia alias dolor mollitia omnis fugit repellat!</p>
-        </section>
-    </main>
+        <!--Alerta exito-->
+        <div id="success-msg" class="alert alert-success d-none d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Success:">
+                <use xlink:href="#check-circle-fill"/>
+            </svg>
+            <div>Acceso concedido</div>
+        </div>
+
+        <!--Alerta incorrectp-->
+        <div id="error-msg" class="alert alert-danger d-none d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:">
+                <use xlink:href="#exclamation-triangle-fill"/>
+            </svg>
+            <div>Clave incorrecta.</div>
+        </div>
+    </div>
+
+    <div id="gestion-clientes" style="display:none;">
+        <h2>Gestor de clientes</h2>
+        <ul id="lista-clientes" class="grupo-lista mt-3"></ul> <!--MT 3 es de bpptstrap,margin top 3(nivel de espaciado)-->
+    </div>
+
+
+
+
     <footer class="footer">
         <div class="container footer__container">
             <!--redes sociales-->
@@ -87,6 +113,13 @@
             <p>© 2025 Universo Agencia. Todos los derechos reservados.</p>
         </div>
     </footer>
+
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+        <symbol id="exclamation-triangle-fill" fill="currentColor" viewBox="0 0 16 16">
+            <path d="M8.982 1.566a1.13 1.13 0 0 0-1.964 0L.165 13.233c-.457.778.091 1.767.982 1.767h13.707c.89 0 1.438-.99.982-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1-2.002 0 1 1 0 0 1 2.002 0z"/>
+        </symbol>
+    </svg>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-…" crossorigin="anonymous"></script>
     <script src="../javaScript/script-gestion.js"></script>
 </body>
 </html>
